index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

body {
    background-color: rgb(24, 24, 24);

}

.container {
    display: flex;
    align-items: center;
    justify-content: center;
}

#chat-container {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    width: 60%;
    height: 100vh;
    padding: 0 10px;
    position: absolute;
    bottom: 0;
}

.input-container {
    background-color: rgb(68, 68, 68);
    border-radius: 25px;
    margin-bottom: 10px;
    padding: 6px 0;
}

.input-container__elements {
    display: flex;
    align-items: flex-end;
}

.message-input {
    background-color: rgb(68, 68, 68);
    color: snow;
    border: none;
    padding-right: 12px;
    font-size: 14px;
    white-space: pre-wrap;
    line-height: 20px;
    width: 100%;
    align-self: center;
    outline: none;
    resize: none;
}

.send-button,
.remove-btn {
    height: 40px;
    font-size: 14px;
    font-weight: 500;
    line-height: 13px;
    border: none;
    cursor: pointer;
}

.remove-btn {
    color:crimson;
    background-color: transparent;
    margin: 0 10px;
}

.send-button {
    width: 40px;
    border-top-right-radius: 50%;
    border-bottom-right-radius: 50%;
    margin-right: 15px;
}

.sign-in-btn-container,
.sign-out-btn-container {
    display: flex;
    justify-content: center;
}

.sign-in-btn,
.sign-out-btn {
    padding: 10px 15px;
    background-color: rgb(0, 170, 113);
    border-radius: 10px;
    border: none;
    color: white;
    cursor: pointer;
}

.enabledBtn {
    background: transparent;
    color: rgb(167, 13, 233);
}

.disabledBtn {
    background-color: transparent;
    opacity: 15%;
    cursor: default;
}

#messages-container {
    color: snow;
    padding: 10px;
    border-radius: 6px;
    width: 100%;
    height: 100%;
    position: relative;
}

#messages {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    list-style: none;
    position: absolute;
    bottom: 0;
    right: 0;
    margin-bottom: 10px;
    width: 100%;
}

li {
    max-width: 80%;
    padding: 7px 12px;
    margin-bottom: 2px;
    border: none;
    background-color: rgb(49, 49, 49);
    border-radius: 15px;
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    overflow: hidden;
    word-wrap: break-word;
}

li:last-child {
    border-bottom-right-radius: 15px;
}

li:first-child {
    border-top-right-radius: 15px;
}

